<resources>
    <string name="app_name">BookTracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="library">Библиотека</string>
    <string name="saved">Сохраненные</string>
    <string name="number_of_items">0 в коллекции</string>
    <string name="favoriote">Любимое</string>
    <string name="readed">Прочитано</string>
    <string name="library_empty">Пока тут пусто!</string>
    <string name="try_to_find">Попробуйте найти свою первую книгу!</string>
    <string name="settings">Настройки</string>
    <string name="switchTheme">Светлая/Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="email_write">Напишите нам</string>
    <string name="search">Поиск</string>
    <string name="email_adress">paramo93@bk.ru</string>
    <string name="share_text">Приложение-библиотека</string>
    <string name="share_subject">О да!</string>


    <string name="collection_description_save">collection_description_save</string>
    <string name="library_fragment_arrow_to_collection_item">library_fragment_arrow_to_collection_item</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="clear_img">clear_img</string>
    <string name="search_startPlaceholder">Найдите то, что вам понравится</string>
    <string name="oblojka">Обложка</string>
    <string name="pagesCount">Страниц: %1$s</string>
    <string name="not_found">Ничего не найдено!</string>
    <string name="error">Проблемы с соединением…</string>
    <string name="arrowback">arrowBack</string>
</resources>