<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context=".SettingsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBoarder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/side_margin_start"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBoarder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/side_margin_end"
        />

    <TextView
        android:id="@+id/textView"
        style="@style/SettingsTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings"
        app:layout_constraintEnd_toStartOf="@+id/rightBoarder"
        app:layout_constraintStart_toStartOf="@+id/leftBoarder"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchMaterial"
        style="@style/SettingsSwitchMaterial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/switchTheme"
        app:layout_constraintEnd_toStartOf="@+id/rightBoarder"
        app:layout_constraintStart_toStartOf="@+id/leftBoarder"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingsFragmentShareButton"
        style="@style/SettingsButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/share_app"
        app:icon="@drawable/settings_fragment_share_img"
        app:layout_constraintEnd_toStartOf="@+id/rightBoarder"
        app:layout_constraintStart_toStartOf="@+id/leftBoarder"
        app:layout_constraintTop_toBottomOf="@+id/switchMaterial"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingsFragmentEmailButton"
        style="@style/SettingsButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/email_write"
        app:icon="@drawable/settings_fragment_mail_img"
        app:layout_constraintEnd_toStartOf="@+id/rightBoarder"
        app:layout_constraintStart_toStartOf="@+id/leftBoarder"
        app:layout_constraintTop_toBottomOf="@+id/settingsFragmentShareButton"/>


</androidx.constraintlayout.widget.ConstraintLayout>